pmd 7 fixes